syntax = "proto3";
package encrypted_chat;

// 消息类型枚举
enum MessageType {
  TEXT = 0;           // 普通文本消息
  REVOKE = 1;         // 撤回控制消息
  KEY_EXCHANGE = 2;   // 密钥交换消息
  GROUP_INVITE = 3;   // 群组邀请
  GROUP_JOIN = 4;     // 加入群组
  GROUP_LEAVE = 5;    // 离开群组
  GROUP_KEY_UPDATE = 6; // 群组密钥更新
}

// 会话类型
enum ConversationType {
  DIRECT = 0;   // 单聊
  GROUP = 1;    // 群聊
}

// 聊天消息（加密前的明文结构）
message ChatMessage {
  string message_id = 1;        // 消息唯一标识
  string sender_id = 2;         // 发送者 ID
  string conversation_id = 3;   // 会话 ID
  ConversationType conv_type = 4; // 会话类型
  MessageType type = 5;         // 消息类型
  uint64 timestamp = 6;         // 发送时间戳（毫秒）
  bytes payload = 7;            // 消息内容（根据 type 解析）
  uint32 version = 8;           // 协议版本号
}

// 加密后的消息封装
message EncryptedEnvelope {
  bytes encrypted_payload = 1;  // 加密后的 ChatMessage
  bytes nonce = 2;              // AES-GCM nonce (12 bytes)
  bytes signature = 3;          // ECDSA 签名
  string sender_id = 4;         // 发送者 ID（明文，用于查找公钥验签）
  uint64 timestamp = 5;         // 时间戳（明文，用于排序）
  uint32 version = 6;           // 封装版本号
}

// 文本消息 payload
message TextPayload {
  string content = 1;           // 文本内容
}

// 撤回消息 payload
message RevokePayload {
  string target_message_id = 1; // 被撤回的消息 ID
  string reason = 2;            // 撤回原因（可选）
}

// 密钥交换 payload
message KeyExchangePayload {
  bytes ephemeral_public_key = 1; // 临时公钥
  bytes encrypted_session_key = 2; // 加密的会话密钥
  string target_user_id = 3;      // 目标用户 ID
}

// 群组邀请 payload
message GroupInvitePayload {
  string group_id = 1;          // 群组 ID
  string group_name = 2;        // 群组名称
  bytes encrypted_group_key = 3; // 加密的群组密钥
  repeated string member_ids = 4; // 成员列表
}

// 群组密钥更新 payload
message GroupKeyUpdatePayload {
  string group_id = 1;
  bytes encrypted_group_key = 2; // 用接收者公钥加密的新群组密钥
  uint32 key_version = 3;        // 密钥版本号
}
